fix(zola): possible overlap of product summary
- Sets the opacity of the product summary so that it stays legible in
  case it overlaps with the product logo image.

--- a/zola/sass/styles.scss
+++ b/zola/sass/styles.scss
@@ -124,6 +124,8 @@ p {
         bottom: 5.0rem;
         font-weight: 700;
         font-size: 2.0em;
+        opacity: 0.8;
+        background-color: $codemonger;
       }
     }
   }
